# h2a_aewr_paper

./: .Rprofile  .dropbox-remote  .env.example  .envrc  .gitignore  .oldgitignore  .rclone-ignore  H2A Estimation Strategy.docx  README.md  a02_01_match_h2a_locations.md  a02_02_clean_unmatched_locations_using_gemini.md  a02_03_use_places_api_to_get_county.md  a14_02_pull_gnatsgo.md  a14_03_elastic_net_estimation.md  conversation.json  desktop.ini  extract_gemini.py  flake.nix  flake.nix.old  gemini_transcript.md  main.py  phil_data_ast.py  pyproject.toml  shell.nix
.claude/: settings.local.json
.direnv/: nix-profile-.9214.7e495b747b51  nix-profile-.9214.7e495b747b51 (Churn Ken Lee's conflicted copy 2026-04-18).rc  nix-profile-.9214.7e495b747b51.rc  nix-profile-26.05-75bkaivfbwq3x8cs.rc  nix-profile-26.05-l61vfkyy0qrnz9bm  nix-profile-26.05-l61vfkyy0qrnz9bm.rc  nix-profile-26.05-wjfxdzblindbl9sp  nix-profile-26.05-wjfxdzblindbl9sp.rc
Code/: DEPRECATED_a03_create_nass_quickstats_binaries.ipynb  DEPRECATED_a05_create_h2a_binaries_addendum_b.ipynb  DEPRECATED_a05_create_h2a_binaries_from_raw.ipynb  DEPRECATED_a08_create_whd_enforcement_binaries.ipynb  DEPRECATED_a09_scrape_trac.ipynb  DEPRECATED_a10_aggregate_croplandcros_cdl_county.ipynb  DEPRECATED_a14_create_state_minimum_wages.ipynb  DEPRECATED_a15_clean_ers_yearbook_tables.ipynb  a01_extract_aewr_tables.py  a02_01_match_h2a_locations.py  a02_03_use_places_api_to_get_county.py  a02_create_nass_census_and_survey_binaries_OLD.py  a03_create_nass_census_and_survey_binaries.py  a03_create_oews_binaries.py  a05_02_clean_unmatched_locations_using_gemini.py  a09_01_aggregate_croplandcros_cdl_county_using_exactextract.py  a09_02_extract_cdl_crop_name.py  a09_03_check_exactextract_rasterio_equivalence.py  a10_aggregate_croplandcros_cdl_county.py  a10_aggregate_croplandcros_cdl_county_using_exactextract.py  a10_check.py  a11_county_crop_statistics.py  a11_create_rma_sob_binaries.py  a13_create_rma_binaries.py  a14_clean_ers_yearbook_tables.py  a14_create_state_minimum_wages.py  a15_clean_ers_yearbook_tables.py  a16_create_rma_adm_binaries.py  ai_studio_xwalk.txt  b01_h2a_aggregation_nodupes.R  b02_extract_nass_census_survey.R  b03_acs_immigrant_imputation.R  b04_acs_qcew_crop_animal_employment_ratio.R  b05_bea_farm_nonfarm_employment.R  b10_clean_nass_for_price_index.R  b11_clean_nass_for_price_index.R  b12_calculate_crop_price_from_rma_sob.R  b14_calculate_nass_price_index.R  b14_croplandcros_check.R  b15_clean_nass_for_price_index.R  (+5 more)
Do/: H2A Analysis Figs and Tables (Churn Ken Lee's conflicted copy 2026-04-18).R  H2A Analysis Figs and Tables.R  H2A Build Dataset.R  H2A Clean and Load.R  H2A Master.R  H2A Pull Min Wages.R  Read Parquet.R  TSCB.R  plan_to_revise_phil.md  scratch.R  tmp_obscheck.R  tmp_threshold_diag.R
Markdowns/: aewr_cluster_instrument_writeup.md  county_vintage_audit.html  county_vintage_audit.md  cz_wage_quantiles_investigation.md  deep-research-report-wooldridge.md  fls_entropy_diagnostics_guide.md  fls_realized_sampling_weight_instrument.md  fls_sampling_weight_auxiliary_variables.md  process_cleaning.md  project_overview.md  wooldridge_approach_h2a_mapping.md
code/: DEPRECATED_a01_extract_aewr_tables.ipynb  DEPRECATED_a02_create_nass_census_binaries.ipynb  DEPRECATED_a05_create_h2a_binaries_addendum_b.py  a00_compress_tifs.py  (+133 more)
(+308 files in other folders)
