[project]
name = "h-2a-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "addfips>=0.4.2",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "exactextract>=0.3.0",
    "fastparquet>=2024.11.0",
    "geopandas>=1.1.2",
    "google-genai>=1.56.0",
    "google-maps-places>=0.5.0",
    "googlemaps>=4.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lancedb>=0.29.2",
    "marimo[recommended]>=0.18.4",
    "matplotlib>=3.10.8",
    "nasspython>=1.0.0",
    "nbconvert>=7.16.6",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pip>=25.1.1",
    "polars>=1.36.1",
    "polars-io>=0.5.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.47.0",
    "pyprojroot>=0.3.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "rapidfuzz>=3.13.0",
    "rasterio>=1.5.0",
    "ratelimit>=2.2.1",
    "requests>=2.32.4",
    "rioxarray>=0.21.0",
    "us>=3.2.0",
    "websockets>=15.0.1",
    "xlrd>=2.0.2",
]
